--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ MarkupSafe==1.1.1
 marshmallow==3.5.1
 marshmallow-sqlalchemy==0.22.3
 mccabe==0.6.1
-psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pylint==2.4.4
