--- a/Pipfile
+++ b/Pipfile
@@ -2,9 +2,41 @@
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
- 
+
 [packages]
-flask = "*"
- 
+flask = "==1.1.1"
+alembic = "==1.4.2"
+astroid = "==2.3.3"
+click = "==7.1.1"
+entrypoints = "==0.3"
+flake8 = "==3.7.9"
+flask-cors = "==3.0.8"
+flask-marshmallow = "==0.11.0"
+flask-migrate = "==2.5.3"
+flask-script = "==2.0.6"
+flask-sqlalchemy = "==2.4.1"
+gunicorn = "==20.0.4"
+isort = "==4.3.21"
+itsdangerous = "==1.1.0"
+jinja2 = "==2.11.1"
+lazy-object-proxy = "==1.4.3"
+mako = "==1.1.2"
+markupsafe = "==1.1.1"
+marshmallow = "==3.5.1"
+marshmallow-sqlalchemy = "==0.22.3"
+mccabe = "==0.6.1"
+psycopg2-binary = "==2.8.5"
+pycodestyle = "==2.5.0"
+pyflakes = "==2.1.1"
+pylint = "==2.4.4"
+python-dateutil = "==2.8.1"
+python-dotenv = "==0.12.0"
+python-editor = "==1.0.4"
+six = "==1.14.0"
+sqlalchemy = "==1.3.16"
+typed-ast = "==1.5.4"
+werkzeug = "==1.0.0"
+wrapt = "==1.11.2"
+
 [requires]
 python_version = "3.10.7"
